# fvcom-mesh-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DATA_INVENTORY.md  DESIGN_HISTORY.md  LITERATURE_SURVEY_AUTOMESH.md  STAGE2_DESIGN.md  TIME_EFFICIENT_DEBUGGING.md  TOOLCHAIN_SURVEY.md  architecture.md  detector_repair_matrix.md  engine_complementarity.md  fvcom_mesh_kickoff.md  fvcom_source_constraints.md  gate_passing_pipeline.md  patch_re_cdt_design.md  phase_h_finishing_chain.md  phase_h_user_guide.md  python_pipeline_gap_analysis.md
notebooks/: 01_read_fort14_summary.pjsub  01_read_fort14_summary.py  02_open_boundary_orthogonality.pjsub  02_open_boundary_orthogonality.py  03_mk_orthogonalize_effect.pjsub  03_mk_orthogonalize_effect.py  04_boundary_perp_fix.pjsub  04_boundary_perp_fix.py  05_ocsmesh_minimal.pjsub  05_ocsmesh_minimal.py  06_parity_compare.pjsub  06_parity_compare.py  07_buildmesh_e2e.pjsub  07_buildmesh_e2e.py  08_quality_pass.pjsub  08_quality_pass.py  09_edge_swap.pjsub  09_edge_swap.py  100_fvcom_m2_tide.pjsub  100_make_v5_tide_case.py  101_v5s_finalize.pjsub  102_fvcom_m2_tide.pjsub  102_make_v5s_tide_case.py  103_v5s_refinal.pjsub  104_v5s_fullfinal.pjsub  105_v5u_pipeline.pjsub  106_v5u_final.pjsub  107_fvcom_m2_tide.pjsub  107_make_v5u_tide_case.py  10_swap_smooth_combo.pjsub  10_swap_smooth_combo.py  111_sizing_diagnosis.pjsub  111_sizing_diagnosis.py  115_river_water_probe.pjsub  115_river_water_probe.py  11_buildmesh_quality_pass.pjsub  11_buildmesh_quality_pass.py  120_v6_multiscale.pjsub  120_v6_multiscale_poc.py  125_v6_pipeline.pjsub  (+606 more)
recipes/: tokyo_bay_v5.yaml  tokyo_bay_v5s.yaml  tokyo_bay_v5u.yaml  tokyo_bay_v6.yaml  tokyo_bay_v6s.yaml
recipes/edits/sample_repro/: edit_001_haneda_d_runway.json  edit_003_west_edge_crack.json  edit_004_ow05_harbor.json  edit_005_ow05_urayasu.json  edit_006_ow05_basin.json
recipes/mesh_edits/sample_repro/: medit_001_ow05.json
src/fvcom_mesh_tools/: __init__.py  backend.py  channel_arcs.py  channel_policy.py  diagnostics.py  finishing.py  gridref.py  mesh_clean.py  mesh_clean_phase_h.py  obc_band.py  obc_tools.py  plotting.py  qa.py  quality.py  site_session.py  waterways.py
src/fvcom_mesh_tools/algorithms/: __init__.py  boundary.py  boundary_snap.py  edge_swap.py  mesh_edits.py  obc_finish.py  perp_local.py  perpendicularity.py  quality.py  refine.py  rivers.py  site_edits.py  smoothing.py
src/fvcom_mesh_tools/autofinish/: detect.py
src/fvcom_mesh_tools/cli/: buildmesh.py  exportfvcom.py  meshcheck.py  meshclean.py  meshcombine.py  meshpipeline.py  meshplot.py  meshqa.py  meshquality.py  perpfix.py  pipeline.py  prepshoreline.py  subset_dem.py
src/fvcom_mesh_tools/dem/: __init__.py  bbox.py  interp.py  subset.py
src/fvcom_mesh_tools/finishing/: __init__.py  directives.py  execute.py  plan.py
src/fvcom_mesh_tools/io/: __init__.py  coastline.py  dem_subset.py  fort14.py  fvcom_native.py  geom_filter.py  rivers.py
src/fvcom_mesh_tools/mesh_compose/: __init__.py  convert.py  disjoint.py  overlap.py
src/fvcom_mesh_tools/mesh_engine/: __init__.py  depth.py  multiscale.py  oceanmesh.py  ocsmesh.py
src/fvcom_mesh_tools/prep/: __init__.py  channel_policy_geom.py  shoreline.py  skeleton.py
tests/: test_boundary.py  test_buildmesh_cli.py  test_channel_arcs.py  test_channel_policy_geom.py  test_channel_policy_strict.py  test_dem_subset.py  test_diagnostics.py  test_edge_swap.py  test_finishing_m1.py  test_fort14.py  test_fvcom_native.py  test_geom_filter.py  test_gridref_subcell.py  test_mesh_clean.py  test_mesh_clean_phase_h.py  test_mesh_compose.py  test_mesh_engine_oceanmesh_courant.py  test_mesh_engine_oceanmesh_safety.py  test_meshpipeline_cli.py  test_obc_band.py  test_perpendicularity.py  test_plotting.py  test_prep.py  test_qa.py  test_quality.py  test_refine.py  test_rivers.py  test_site_edits.py  test_smoke.py  test_smoothing.py  test_waterways.py  test_waterways_normalize.py
tests/fixtures/: tiny.fort14
tools/: README.md  migrate_oceanmesh2d_data.pjsub  replace_oceanmesh2d_with_symlinks.sh
