[project]
name = "fvcom-mesh-tools"
version = "0.0.1"
description = "Python toolkit for FVCOM unstructured mesh generation, repair, and visualization."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jun Sasaki" }]
keywords = ["fvcom", "unstructured-mesh", "ocean-modeling", "mesh-generation", "fort14"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]
dev = ["ruff>=0.5", "pytest>=7.4"]
viz = ["plotly>=5.15"]
ocsmesh = ["ocsmesh"]
meshkernel = ["meshkernel"]
gmsh = ["gmsh"]
jigsaw = ["jigsawpy"]

[project.scripts]
fmesh-perpfix = "fvcom_mesh_tools.cli.perpfix:main"
fmesh-buildmesh = "fvcom_mesh_tools.cli.buildmesh:main"
fmesh-subset-dem = "fvcom_mesh_tools.cli.subset_dem:main"
fmesh-mesh-combine = "fvcom_mesh_tools.cli.meshcombine:main"

[project.urls]
Homepage = "https://github.com/estuarine-utokyo/fvcom-mesh-tools"
Issues = "https://github.com/estuarine-utokyo/fvcom-mesh-tools/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
