[project]
name = "fvcom-mesh-tools"
version = "0.0.1"
description = "Python toolkit for FVCOM unstructured mesh generation, repair, and visualization."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Jun Sasaki" }]
keywords = ["fvcom", "unstructured-mesh", "ocean-modeling", "mesh-generation", "fort14"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
]

# Optional extras layered by concern. Pure-fort.14 callers
# (algorithms, mesh_compose, fmesh-perpfix, fmesh-mesh-combine
# --strategy disjoint) need only the base install. DEM I/O and
# vector I/O are isolated so a minimal install does not pull the
# compiled raster stack.
[project.optional-dependencies]
io-vector = ["shapely>=2.0", "geopandas>=0.14", "fiona>=1.9"]
dem = ["rasterio>=1.3", "netCDF4>=1.6", "pyproj>=3.6"]
oceanmesh = ["oceanmesh", "fvcom-mesh-tools[dem,io-vector]"]
ocsmesh = ["ocsmesh", "gmsh", "fvcom-mesh-tools[dem,io-vector]"]
meshkernel = ["meshkernel"]
jigsaw = ["jigsawpy"]
viz = ["matplotlib>=3.8", "plotly>=5.15"]
test = ["pytest>=7.4"]
dev = ["ruff>=0.5", "pytest>=7.4"]
all = ["fvcom-mesh-tools[oceanmesh,ocsmesh,viz]"]

[project.scripts]
fmesh-perpfix = "fvcom_mesh_tools.cli.perpfix:main"
fmesh-buildmesh = "fvcom_mesh_tools.cli.buildmesh:main"
fmesh-subset-dem = "fvcom_mesh_tools.cli.subset_dem:main"
fmesh-mesh-combine = "fvcom_mesh_tools.cli.meshcombine:main"
fmesh-mesh-check = "fvcom_mesh_tools.cli.meshcheck:main"
fmesh-mesh-clean = "fvcom_mesh_tools.cli.meshclean:main"
fmesh-mesh-quality = "fvcom_mesh_tools.cli.meshquality:main"
fmesh-mesh-qa = "fvcom_mesh_tools.cli.meshqa:main"
fmesh-export-fvcom = "fvcom_mesh_tools.cli.exportfvcom:main"
fmesh-plot-mesh = "fvcom_mesh_tools.cli.meshplot:main"
fmesh-mesh-pipeline = "fvcom_mesh_tools.cli.meshpipeline:main"

[project.urls]
Homepage = "https://github.com/estuarine-utokyo/fvcom-mesh-tools"
Issues = "https://github.com/estuarine-utokyo/fvcom-mesh-tools/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
